# RMMR

./: .gitignore  README.md  hello  hello.cpp
W1/: CMakeLists.txt  main.cpp  编译说明.txt
W1/cpp_basic/: swap_demo.cpp
W2/: listener.cpp  taiker.py
W2/launch/: talker_listener.launch.py
W3/: armor_detect  main.cpp
W4/armor_detector/: CMakeLists.txt
W4/armor_detector/config/: params.yaml
W4/armor_detector/launch/: detector.launch.py
W4/armor_detector/src/: detector_node.cpp
W4/src/armor_detector/src/: camera_node.cpp
src/armor_detector/: CMakeLists.txt  README.md  package.xml
src/armor_detector/config/: params.yaml
src/armor_detector/docs/: W7_defense.md  W7_error_analysis.md  defense_material.md  defense_notes.md  failure_cases.md  review_feedback_plan.md  week6_report.md  week7_feedback_fix_report.md  week7_plan.md  week7_report.md
src/armor_detector/docs/week5/: week5_summary.md
src/armor_detector/include/armor_detector/: armor_detect_core.hpp  onnx_classifier.hpp
src/armor_detector/launch/: detector.launch.py
src/armor_detector/scripts/: save_debug_image.py
src/armor_detector/src/: camera_node.cpp  detector_node.cpp  mvs_camera_node.cpp
src/armor_detector/test/: experiment_input_size.py  test_image.cpp
src/armor_interfaces/: CMakeLists.txt  package.xml
src/armor_interfaces/msg/: Armor.msg  Armors.msg
